# G-Type

./: .gitignore  BENCHMARK.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.hi.md  README.it.md  README.md  README.pt-BR.md  SECURITY.md  install.ps1  install.sh  spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  audio.rs  audio_feedback.rs  config.rs  injector.rs  input.rs  main.rs  network.rs  tracking.rs  upgrade.rs
