[package]
name = "g-type"
version = "1.0.0"
edition = "2021"
description = "Global walkie-talkie dictation daemon powered by Gemini REST API"
license = "MIT"
repository = "https://github.com/IntelligenzaArtificiale/g-type"
readme = "README.md"

[[bin]]
name = "g-type"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Gemini REST API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

# Audio capture
cpal = "0.15"

# Global keyboard hooks
rdev = "0.5"

# Text injection (keystroke emulation)
enigo = { version = "0.2", features = ["serde"] }

# Low-level libc (stderr redirect for ALSA noise suppression)
libc = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Logging / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for audio chunks
base64 = "0.22"

# Config directory resolution
directories = "5"
arboard = "3.6.1"
rodio = "0.20.1"
reqwest-retry = "0.8"
reqwest-middleware = { version = "0.4", features = ["json"] }
dialoguer = "0.12.0"
indicatif = "0.17"
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
